# tvpaint-rpc

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  library.def  pyproject.toml
src/: main.cpp  server.cpp  server.hpp
